--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -55,7 +55,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/series_update"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/row_height"
                 android:layout_margin="@dimen/margin"
                 android:background="@drawable/rounded_gray_background"
                 app:layout_constraintTop_toBottomOf="@id/top_slider"
@@ -82,7 +82,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:src="@drawable/add"
                     app:tint="@color/white"
                     android:paddingEnd="@dimen/padding"
                     app:layout_constraintTop_toTopOf="parent"
@@ -113,7 +112,5 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
