--- a/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxhdpi/dimens.xml
@@ -4,8 +4,13 @@
     <dimen name="padding">15dp</dimen>
     <dimen name="poster_width">150dp</dimen>
     <dimen name="poster_height">215dp</dimen>
+    <dimen name="poster_medium_width">170dp</dimen>
+    <dimen name="poster_medium_height">245dp</dimen>
+    <dimen name="poster_big_width">350dp</dimen>
+    <dimen name="poster_big_height">500dp</dimen>
     <dimen name="corner_radius">5dp</dimen>
     <dimen name="toolbar_height">60dp</dimen>
     <dimen name="toolbar_text_size">20sp</dimen>
     <dimen name="text_size">14sp</dimen>
+    <dimen name="row_height">50dp</dimen>
 </resources>
