--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="orange">#FF6F00</color>
     <color name="dark_grey">#171717</color>
     <color name="white_grey">#333333</color>
+    <color name="white_text_grey">#777777</color>
 </resources>
