--- a/app/src/main/res/drawable/rounded_gray_background_with_border.xml
+++ b/app/src/main/res/drawable/rounded_gray_background_with_border.xml
@@ -2,4 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="@dimen/dp5" />
     <solid android:color="@color/white_grey"/>
+    <stroke android:width="1dp" android:color="@color/white_text_grey"/>
 </shape>
