--- a/app/src/main/res/layout/item_similar.xml
+++ b/app/src/main/res/layout/item_similar.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/padding"
+    android:layout_margin="@dimen/dp15"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ImageView
@@ -18,7 +18,7 @@
         android:id="@+id/similar_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/padding"
+        android:padding="@dimen/dp15"
         android:fontFamily="@font/montserrat_bold"
         android:textColor="@color/white"
         android:textSize="@dimen/text_size"
