--- a/app/src/main/res/layout/item_top_slider.xml
+++ b/app/src/main/res/layout/item_top_slider.xml
@@ -9,7 +9,7 @@
         android:layout_width="@dimen/poster_width"
         android:layout_height="@dimen/poster_height"
         android:scaleType="centerCrop"
-        android:paddingEnd="@dimen/padding"
-        app:riv_corner_radius="@dimen/corner_radius"/>
+        android:paddingEnd="@dimen/dp15"
+        app:riv_corner_radius="@dimen/dp5"/>
 
 </FrameLayout>
