--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -11,7 +11,7 @@
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar_height"
+        android:layout_height="@dimen/dp60"
         android:background="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,8 +45,8 @@
                 android:id="@+id/top_slider"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/margin"
-                android:padding="@dimen/padding"
+                android:layout_margin="@dimen/dp20"
+                android:padding="@dimen/dp15"
                 android:background="@drawable/rounded_gray_background"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -55,8 +55,8 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/series_update"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/row_height"
-                android:layout_margin="@dimen/margin"
+                android:layout_height="@dimen/dp50"
+                android:layout_margin="@dimen/dp20"
                 android:background="@drawable/rounded_gray_background"
                 app:layout_constraintTop_toBottomOf="@id/top_slider"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,7 +71,7 @@
                     android:fontFamily="@font/montserrat_bold"
                     android:text="@string/series_update"
                     android:textColor="@color/white"
-                    android:paddingStart="@dimen/padding"
+                    android:paddingStart="@dimen/dp15"
                     android:textSize="@dimen/text_size"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     app:tint="@color/white"
-                    android:paddingEnd="@dimen/padding"
+                    android:paddingEnd="@dimen/dp15"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
@@ -105,9 +105,48 @@
                     android:id="@+id/series_update_list"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="@dimen/margin"/>
+                    android:layout_margin="@dimen/dp20"/>
 
             </net.cachapa.expandablelayout.ExpandableLayout>
+
+            <FrameLayout
+                android:id="@+id/filter_frame_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/dp20"
+                android:background="@drawable/rounded_orange_border"
+                android:clickable="true"
+                android:focusable="true"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/series_update_expandable">
+
+                <LinearLayout
+                    android:id="@+id/filter_layout"
+                    android:padding="@dimen/dp15"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/filter_icon"
+                        android:src="@drawable/filter"
+                        app:tint="@color/orange"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                    <TextView
+                        android:id="@+id/filter_text"
+                        android:text="@string/filter"
+                        android:textColor="@color/orange"
+                        android:fontFamily="@font/montserrat_bold"
+                        android:textSize="@dimen/text_size"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </FrameLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
