--- a/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxhdpi/dimens.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="margin">20dp</dimen>
-    <dimen name="padding">15dp</dimen>
+    <dimen name="dp5">5dp</dimen>
+    <dimen name="dp10">10dp</dimen>
+    <dimen name="dp15">15dp</dimen>
+    <dimen name="dp20">20dp</dimen>
+    <dimen name="dp50">50dp</dimen>
+    <dimen name="dp60">60dp</dimen>
     <dimen name="poster_width">150dp</dimen>
     <dimen name="poster_height">215dp</dimen>
     <dimen name="poster_medium_width">170dp</dimen>
     <dimen name="poster_medium_height">245dp</dimen>
     <dimen name="poster_big_width">350dp</dimen>
     <dimen name="poster_big_height">500dp</dimen>
-    <dimen name="corner_radius">5dp</dimen>
-    <dimen name="toolbar_height">60dp</dimen>
+
+    <dimen name="text_size">15sp</dimen>
     <dimen name="toolbar_text_size">20sp</dimen>
-    <dimen name="text_size">14sp</dimen>
-    <dimen name="row_height">50dp</dimen>
 </resources>
