--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="dark_grey">#171717</color>
     <color name="white_grey">#333333</color>
     <color name="white_text_grey">#777777</color>
+    <color name="white_white_text_grey">#909090</color>
 </resources>
