--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -25,19 +25,21 @@
             android:text="@string/toolbar_text"
             android:textAllCaps="true"
             android:textColor="@color/orange"
-            android:textSize="@dimen/toolbar_text_size"/>
+            android:textSize="@dimen/toolbar_text_size" />
 
     </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
+        android:id="@+id/scroll"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/rootView"
             android:layout_width="match_parent"
             android:layout_height="0dp">
 
@@ -46,11 +48,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dp20"
-                android:padding="@dimen/dp15"
                 android:background="@drawable/rounded_gray_background"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                android:padding="@dimen/dp15"
+                app:layout_constraintEnd_toEndOf="@id/rootView"
+                app:layout_constraintStart_toStartOf="@id/rootView"
+                app:layout_constraintTop_toTopOf="@id/rootView" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/series_update"
@@ -58,35 +60,35 @@
                 android:layout_height="@dimen/dp50"
                 android:layout_margin="@dimen/dp20"
                 android:background="@drawable/rounded_gray_background"
-                app:layout_constraintTop_toBottomOf="@id/top_slider"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 android:clickable="true"
-                android:focusable="true">
+                android:focusable="true"
+                app:layout_constraintEnd_toEndOf="@id/rootView"
+                app:layout_constraintStart_toStartOf="@id/rootView"
+                app:layout_constraintTop_toBottomOf="@id/top_slider">
 
                 <TextView
                     android:id="@+id/series_update_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat_bold"
+                    android:paddingStart="@dimen/dp15"
                     android:text="@string/series_update"
                     android:textColor="@color/white"
-                    android:paddingStart="@dimen/dp15"
                     android:textSize="@dimen/text_size"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/series_update_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    app:tint="@color/white"
                     android:paddingEnd="@dimen/dp15"
-                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tint="@color/white" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -94,18 +96,18 @@
                 android:id="@+id/series_update_expandable"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/series_update"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:el_duration="1000"
                 app:el_expanded="false"
-                app:el_parallax="0.5">
+                app:el_parallax="0.5"
+                app:layout_constraintEnd_toEndOf="@id/rootView"
+                app:layout_constraintStart_toStartOf="@id/rootView"
+                app:layout_constraintTop_toBottomOf="@id/series_update">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/series_update_list"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_margin="@dimen/dp20"/>
+                    android:layout_margin="@dimen/dp20" />
 
             </net.cachapa.expandablelayout.ExpandableLayout>
 
@@ -117,36 +119,106 @@
                 android:background="@drawable/rounded_orange_border"
                 android:clickable="true"
                 android:focusable="true"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/orderText"
+                app:layout_constraintEnd_toEndOf="@id/rootView"
+                app:layout_constraintStart_toStartOf="@id/rootView"
                 app:layout_constraintTop_toBottomOf="@id/series_update_expandable">
 
                 <LinearLayout
                     android:id="@+id/filter_layout"
-                    android:padding="@dimen/dp15"
-                    android:layout_gravity="center_horizontal"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:padding="@dimen/dp15">
 
                     <ImageView
                         android:id="@+id/filter_icon"
-                        android:src="@drawable/filter"
-                        app:tint="@color/orange"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/filter"
+                        app:tint="@color/orange" />
 
                     <TextView
                         android:id="@+id/filter_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/montserrat_bold"
                         android:text="@string/filter"
                         android:textColor="@color/orange"
-                        android:fontFamily="@font/montserrat_bold"
-                        android:textSize="@dimen/text_size"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
+                        android:textSize="@dimen/text_size" />
 
                 </LinearLayout>
 
             </FrameLayout>
+
+            <TextView
+                android:id="@+id/orderText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dp20"
+                android:layout_marginBottom="@dimen/dp20"
+                android:fontFamily="@font/montserrat_bold"
+                android:text="@string/sorted_by"
+                android:textColor="@color/white"
+                android:textSize="@dimen/text_size"
+                app:layout_constraintBottom_toTopOf="@id/order_by_spinner"
+                app:layout_constraintStart_toStartOf="@id/rootView"
+                app:layout_constraintTop_toBottomOf="@id/filter_frame_layout" />
+
+            <Spinner
+                android:id="@+id/order_by_spinner"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dp20"
+                android:layout_marginTop="@dimen/dp10"
+                android:layout_marginEnd="@dimen/dp20"
+                android:background="@drawable/spinner_style"
+                app:layout_constraintEnd_toStartOf="@id/order"
+                app:layout_constraintStart_toStartOf="@id/rootView"
+                app:layout_constraintTop_toBottomOf="@id/orderText" />
+
+            <FrameLayout
+                android:id="@+id/order"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                app:layout_constraintEnd_toEndOf="@id/rootView"
+                app:layout_constraintTop_toTopOf="@id/order_by_spinner"
+                app:layout_constraintBottom_toBottomOf="@id/order_by_spinner">
+
+                <ImageView
+                    android:id="@+id/order_desc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/dp20"
+                    android:src="@drawable/sort_desc"
+                    android:padding="@dimen/dp10"
+                    android:background="@drawable/rounded_orange_border"
+                    app:tint="@color/orange" />
+
+                <ImageView
+                    android:id="@+id/order_asc"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="@dimen/dp20"
+                    android:visibility="gone"
+                    android:src="@drawable/sort_asc"
+                    android:padding="@dimen/dp10"
+                    android:background="@drawable/rounded_orange_border"
+                    app:tint="@color/orange" />
+
+            </FrameLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/films_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp20"
+                app:layout_constraintStart_toStartOf="@id/rootView"
+                app:layout_constraintEnd_toEndOf="@id/rootView"
+                app:layout_constraintTop_toBottomOf="@id/order_by_spinner"
+                app:layout_constraintBottom_toBottomOf="@id/rootView"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
