--- a/app/src/main/res/layout/choose_list_fragment.xml
+++ b/app/src/main/res/layout/choose_list_fragment.xml
@@ -1,43 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/dark_grey">
 
-    <ImageView
-        android:id="@+id/choose_list_back"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/chooseToolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp20"
-        android:layout_marginTop="@dimen/dp20"
-        android:src="@drawable/arrow_back"
-        app:tint="@color/white_grey"
-        android:scaleX="1.5"
-        android:scaleY="1.5"
+        android:background="@android:color/black"
+        android:elevation="5dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <SearchView
+            android:id="@+id/search"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="8dp"
+            android:iconifiedByDefault="false"
+            android:searchIcon="@color/white"
+            android:textColorHint="@color/white"
+            android:queryHint="@string/default_search"
+            android:visibility="visible" />
+
+    </androidx.appcompat.widget.Toolbar>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/choose_list"
+        android:id="@+id/chooseList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/dp20"
-        android:layout_marginStart="@dimen/dp20"
-        android:layout_marginEnd="@dimen/dp20"
+        app:layout_constraintTop_toBottomOf="@id/chooseToolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/choose_list_back"
-        app:layout_constraintBottom_toTopOf="@id/choose_submit"/>
-    
-    <Button
-        android:id="@+id/choose_submit"
+        app:layout_constraintBottom_toTopOf="@id/addChoose" />
+
+    <TextView
+        android:id="@+id/addChoose"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/choose_list_submit"
-        android:textAllCaps="false"
-        android:layout_marginStart="@dimen/dp20"
-        android:layout_marginEnd="@dimen/dp20"
+        android:text="@string/add"
+        android:layout_margin="@dimen/dp20"
+        android:background="@drawable/rounded_orange_background"
+        android:gravity="center"
+        android:padding="@dimen/dp10"
+        android:textColor="@color/white"
+        android:textSize="@dimen/text_size"
+        android:fontFamily="@font/montserrat_bold"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
