--- a/app/src/main/res/layout/item_similar.xml
+++ b/app/src/main/res/layout/item_similar.xml
@@ -16,7 +16,7 @@
 
     <TextView
         android:id="@+id/similar_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:padding="@dimen/dp15"
         android:fontFamily="@font/montserrat_bold"
